# ASAUM

./: .gitignore  CMakeLists.txt  README.md
cmake/: regression.cmake  run_test.cmake
example/: CMakeLists.txt  driver.cpp  driver.hpp
exogen/: CMakeLists.txt  exogen.cpp
libsrc/: CMakeLists.txt  config.hpp.in
libsrc/comm/: CMakeLists.txt  comm_info.cpp  comm_info.hpp  comm_map.cpp  comm_map.hpp  comm_mutex.hpp  comm_queue.cpp  comm_queue.hpp  comm_utils.cpp  comm_utils.hpp  directed_queue.cpp  directed_queue.hpp  entity_info.cpp  entity_info.hpp  mpi_comm.cpp  mpi_comm.hpp  mpi_types.hpp  push_queue.hpp  sub_comm.cpp  sub_comm.hpp
libsrc/common/: CMakeLists.txt  boundary.hpp  extract.hpp  shared_data.cpp  shared_data.hpp  sparse_layout.cpp  sparse_layout.hpp  time_step.hpp
libsrc/geom/: bounding_box.hpp  hex.hpp  polygon.hpp  polyhedron.hpp  quad.hpp  tet.hpp  tri.hpp
libsrc/io/: CMakeLists.txt  csv_writer.cpp  csv_writer.hpp  exo_reader.cpp  exo_reader.hpp  exo_types.cpp  exo_types.hpp  exo_writer.cpp  exo_writer.hpp  file_utils.cpp  file_utils.hpp  outvar.hpp  shape.hpp  side_set.cpp  side_set.hpp  vtk_writer.cpp  vtk_writer.hpp  write_binary.cpp  write_binary.hpp  write_zlib.cpp  write_zlib.hpp
libsrc/lua/: CMakeLists.txt  fileutil.lua  interp.lua  lua.cpp  lua.hpp  lua_base.cpp  lua_base.hpp  lua_modules.hpp.in  lua_push.hpp  lua_ref.hpp  lua_result.cpp  lua_result.hpp  lua_utils.cpp  lua_utils.hpp  lua_value.hpp  stringutil.lua
libsrc/math/: CMakeLists.txt  DenseMatrix.hpp  core.hpp  decomp.cpp  decomp.hpp  insert_sort.hpp  math.hpp  merge_sort.hpp  morton.cpp  morton.hpp  quick_sort.hpp  reorder.hpp  subdivide.cpp  subdivide.hpp
libsrc/mesh/: CMakeLists.txt  amr_flags.hpp  box_mesh.cpp  box_mesh.hpp  connect.hpp  exodus_mesh.cpp  exodus_mesh.hpp  exodus_mesh_utils.hpp  face_data.hpp  file_type.cpp  file_type.hpp  mesh.cpp  mesh.hpp  mesh_block.cpp  mesh_block.hpp  mesh_boundary.cpp  mesh_boundary.hpp  mesh_node.cpp  mesh_node.hpp  mesh_struct_block.cpp  mesh_struct_block.hpp  mesh_struct_block_cpu.cpp  mesh_struct_block_cpu.hpp  mesh_struct_node.cpp  mesh_struct_node.hpp  mesh_unstruct_block.cpp  mesh_unstruct_block.hpp  mesh_unstruct_block_cpu.cpp  mesh_unstruct_block_cpu.hpp  partition.cpp  partition.hpp
libsrc/mesh/bamr/: bamr.cpp  bamr.hpp  bamr_block.cpp  bamr_block.hpp  bamr_flags.hpp
libsrc/mesh/ijk/: block_ijk.cpp  block_ijk.hpp  block_ijk_neighbor.cpp  block_ijk_neighbor.hpp  block_ijk_vertex.hpp  ctm.cpp  ctm.hpp  mesh_ijk.cpp  mesh_ijk.hpp  range.cpp  range.hpp  sector.cpp  sector.hpp  transform.cpp  transform.hpp
libsrc/mesh/logical/: logical_flags.hpp  logical_iterators.hpp
libsrc/utils/: CMakeLists.txt  arguments.cpp  arguments.hpp  array_ref.hpp  cast.hpp  crs.hpp  errors.hpp  formatter.hpp  mark.hpp  ordered_map.hpp  result.hpp  string_utils.cpp  string_utils.hpp  thread.cpp  thread.hpp  trace.cpp  trace.hpp  type_traits.hpp  vector_utils.hpp  wall_time.cpp  wall_time.hpp
meshtool/: CMakeLists.txt  driver.cpp  main.cpp  mesh_builder.cpp  mesh_builder.hpp
tests/1d/: CMakeLists.txt  mesh.g.02.00  sod.g  sod.g.02.01  struct.lua  unstruct.lua
tests/1d/struct/csvfiles/000000/: out.mesh.csv.0  out.mesh.csv.1  out.mesh.csv.2  out.mesh.csv.3
tests/1d/struct/vtkfiles/000000/: out.0.vts  out.1.vts  out.2.vts  out.3.vts
tests/1d/unstruct-naive/csvfiles/000000/: out.mesh.csv.0  out.mesh.csv.1
tests/1d/unstruct-naive/vtkfiles/000000/: out.0.vtu  out.2.vtu  out.3.vtu
tests/1d/unstruct-prepart/csvfiles/000000/: out.mesh.csv.2  out.mesh.csv.3
tests/1d/unstruct-prepart/vtkfiles/000000/: out.2.vtu  out.3.vtu
tests/1d/unstruct/csvfiles/000000/: out.mesh.csv.2  out.mesh.csv.3
tests/1d/unstruct/vtkfiles/000000/: out.1.vtu
tests/2d/: CMakeLists.txt  mesh.g  mesh.g.02.00  mesh.g.02.01  struct.lua  unstruct.lua
tests/2d/struct/csvfiles/000000/: out.mesh.csv.0  out.mesh.csv.1  out.mesh.csv.2  out.mesh.csv.3  out.mesh.csv.4  out.mesh.csv.5  out.mesh.csv.6  out.mesh.csv.7  out.mesh.csv.8
tests/2d/struct/vtkfiles/000000/: out.0.vts  out.1.vts  out.2.vts  out.3.vts  out.4.vts  out.5.vts  out.6.vts  out.7.vts  out.8.vts
tests/2d/unstruct-prepart/csvfiles/000000/: sod-unstruct-prepart.mesh.csv.0  sod-unstruct-prepart.mesh.csv.1  sod-unstruct-prepart.mesh.csv.2  sod-unstruct-prepart.mesh.csv.3  sod-unstruct-prepart.mesh.csv.4  sod-unstruct-prepart.mesh.csv.5  sod-unstruct-prepart.mesh.csv.6  sod-unstruct-prepart.mesh.csv.7  sod-unstruct-prepart.mesh.csv.8
tests/3d/: CMakeLists.txt  mesh.g.02.00  sod.g  sod.g.02.01  struct.lua  unstruct.lua
tools/: numdiff.py  plot.py
(+207 files in other folders)
